# Wasm-Gpt

./: README.md
frontend/: Cargo.toml
frontend/src/: lib.rs  main.rs
frontend/src/components/: chat_input.rs  chat_message.rs  mod.rs  side_menu.rs
leptos-gpt/: Cargo.toml  package-lock.json  tailwind.config.js
leptos-gpt/src/: api.rs  app.rs  main.rs
leptos-gpt/src/app/components/: chat_area.rs  chat_input.rs  mod.rs
leptos-gpt/src/model/: chatlog.rs  mod.rs
proxy-server/src/: main.rs
yew-gpt/frontend/: index.html
yew-gpt/proxy-server/: Cargo.toml
